<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="settings_preference_key_display" translatable="false">settings_preference_key_display</string>
    <string name="settings_preference_key_viewer" translatable="false">settings_preference_key_viewer</string>
    <string name="settings_preference_key_folder" translatable="false">settings_preference_key_folder</string>
    <string name="settings_preference_key_restore_on_launch" translatable="false">settings_preference_key_restore_on_launch</string>
    <string name="settings_preference_key_security" translatable="false">settings_preference_key_security</string>
    <string name="settings_preference_key_license" translatable="false">settings_preference_key_license</string>
    <string name="settings_preference_key_app" translatable="false">settings_preference_key_license</string>
    <string name="settings_preference_key_tutorial" translatable="false">settings_preference_key_tutorial</string>
    <string name="settings_title_tutorial">Tutorial</string>
    <string name="settings_label_display">Display</string>
    <string name="settings_label_folder">Folder</string>
    <string name="settings_label_viewer">Viewer</string>
    <string name="settings_label_security">Security</string>
    <string name="settings_label_app">App Info</string>

    <string name="settings_app_preference_key_build" translatable="false">settings_app_preference_key_build</string>
    <string name="settings_app_preference_key_version" translatable="false">settings_app_preference_key_version</string>
    <string name="settings_app_preference_key_rate" translatable="false">settings_app_preference_key_rate</string>
    <string name="settings_app_label_version">Version</string>
    <string name="settings_app_label_build">Build</string>
    <string name="settings_app_label_rate">Rate the app</string>
</resources>
